--- a/HelloKotlin/build.gradle
+++ b/HelloKotlin/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.1.4'
     ext.anko_version = '0.10.0'
+    ext.support_version = '25.3.1'
+
     repositories {
         jcenter()
     }
